--- a/app/src/main/res/layout/fragment_drivers_standings.xml
+++ b/app/src/main/res/layout/fragment_drivers_standings.xml
@@ -14,7 +14,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/driversRecycler"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -37,11 +37,12 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
         <View
             android:id="@+id/DriverStandingsprogressOverlay"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#80000000"/>
+            android:background="#80000000" />
 
         <ImageView
             android:id="@+id/DriverStandingsProgressBarBackground"
@@ -79,6 +80,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/DriverStandingsProgressBar" />
+
         <ImageView
             android:id="@+id/connectionOverlayBackground"
             android:layout_width="250dp"
@@ -133,6 +135,21 @@
             app:layout_constraintStart_toStartOf="@+id/connectionOverlayBackground"
             app:layout_constraintTop_toBottomOf="@+id/connectionOverlayLogo"
             app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/dataNotAvailableOverlayDrivers"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/formula1_regular"
+            android:text="@string/data_not_yet_available"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="34sp"
+            app:layout_constraintBottom_toBottomOf="@+id/connectionOverlayBackground"
+            app:layout_constraintEnd_toEndOf="@+id/connectionOverlayBackground"
+            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintStart_toStartOf="@+id/connectionOverlayBackground"
+            app:layout_constraintTop_toTopOf="@+id/connectionOverlayBackground" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
